# logisticsearch

./: .gitignore  IMPORTANT_RUNTIME_MIGRATION_CONTRACTS_READ_FIRST.txt  README.md
crawler_exports/: README.md
docs/: README.md  RUNBOOK_CRAWLER_CORE_CRAWL_MAP_RESUME_JSONB_STANDARD_2026_05_08.md  RUNBOOK_PI51C_THERMAL_FAN_WIFI_CONTROL.md  SECTION1_WEBCRAWLER_CONTROLS.md  SECTION1_WEBCRAWLER_DIRECTORIES_FILES_MAP.md  SECTION1_WEBCRAWLER_DRAIN_AND_GRACEFUL_SHUTDOWN_CONTRACT.md  SECTION1_WEBCRAWLER_LEASE_RENEWAL_CONTRACT.md  SECTION1_WEBCRAWLER_LIFECYCLE_CONTRACT.md  SECTION1_WEBCRAWLER_PROCESSED_DATA_STORAGE_ROUTING_AND_DRAIN_CONTRACT.md  SECTION1_WEBCRAWLER_PROCESSED_DATA_STORAGE_TIER_POLICY.md  SECTION1_WEBCRAWLER_PUBLIC_ACQUISITION_METHOD_CONTRACT.md  SECTION1_WEBCRAWLER_PYTHON_RUNTIME_STRICT_TEST_PHASE_CHECKLIST.md  SECTION1_WEBCRAWLER_RUNBOOK_PROCESSED_DATA_STORAGE_TIER_FORMAT_AND_MOUNT.md  SECTION1_WEBCRAWLER_RUNTIME_TOPOLOGY_AND_NAMING_LOCK.md  SECTION1_WEBCRAWLER_RUNTIME_TREE_AND_DATA_FLOW_MAP.md  SECTION1_WEBCRAWLER_WORKER_HEARTBEAT_OPERATING_RULE.md  SECTION1_WEBCRAWLER_WORKER_OPERATIONAL_CONTRACT.md  SECTIONX_MAP_STACK_AND_GEOSPATIAL_APPLICATION_SURFACE.md  STATUS_STAGE21_PROJECT_CONTINUITY_AND_NEXT_ACTIONS.md  (+93 more)
hosts/: README.md
makpi51crawler/c_live_runtime/: CMakeLists.txt  README.md
makpi51crawler/c_live_runtime/include/logisticsearch_c_runtime/: byte_histogram.h  byte_metrics.h  file_byte_metrics.h  version.h
makpi51crawler/c_live_runtime/src/: byte_histogram.c  byte_metrics.c  file_byte_metrics.c  version.c
makpi51crawler/c_live_runtime/tests/: test_byte_histogram.c  test_byte_metrics.c  test_file_byte_metrics.c  test_version_smoke.c
makpi51crawler/c_live_runtime/tools/: logisticsearch_c_runtime_smoke.c
makpi51crawler/cpp_live_runtime/: .gitignore  CMakeLists.txt  README.md
makpi51crawler/cpp_live_runtime/include/logisticsearch_cpp_runtime/: byte_histogram.hpp  byte_metrics.hpp  file_byte_metrics.hpp  version.hpp
makpi51crawler/cpp_live_runtime/parse_core_worker/requirements/: ai_ranking_py312.apt-packages.txt
makpi51crawler/cpp_live_runtime/process_worker/: BUILD_MINIMAL_PARSE_PAYLOAD_EXTRACTION_CONTRACT.txt
makpi51crawler/cpp_live_runtime/process_worker/requirements/: ai_ranking_py312.requirements.in
makpi51crawler/cpp_live_runtime/src/: byte_histogram.cpp  byte_metrics.cpp  file_byte_metrics.cpp  version.cpp
makpi51crawler/cpp_live_runtime/storage_management_worker/: STORAGE_ROUTING_STORAGE_MANAGEMENT_MIGRATION_CONTRACT.txt
makpi51crawler/cpp_live_runtime/tests/: test_byte_histogram.cpp  test_byte_metrics.cpp  test_file_byte_metrics.cpp  test_version_smoke.cpp
makpi51crawler/cpp_live_runtime/tools/: logisticsearch_cpp_runtime_smoke.cpp
(+368 files in other folders)
